# Abel-skills

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ruff.toml
.claude/: INSTALL.md
.codex/: INSTALL.md
.opencode/: INSTALL.md
bootstrap-cap-server/: SKILL.md
bootstrap-cap-server/assets/templates/level2-fastapi/: README.md  pyproject.toml
bootstrap-cap-server/assets/templates/level2-fastapi/__PACKAGE_NAME__/: capability.py  config.py  graph_metadata.py
bootstrap-cap-server/assets/templates/level2-fastapi/__PACKAGE_NAME__/adapters/: graph_adapter.py
bootstrap-cap-server/assets/templates/level2-fastapi/__PACKAGE_NAME__/handlers/: common.py  graph.py  intervene.py  observe.py
bootstrap-cap-server/assets/templates/level2-fastapi/tests/: test_app.py
causal-abel/: .env.skills.example  CHANGELOG.md  SKILL.md
clawhub/: README.md
docs/: README.claude.md  README.codex.md  README.opencode.md  branching-and-releases.md  developer-builds.md  releases.md
maintainers/: README.md  render_collection.py
scripts/: build_clawhub_release.py  check_pr_release_policy.py  publish_clawhub_release.py
tests/: conftest.py  test_abel_auth_prompt.py  test_abel_common_narrative_probe.py  test_abel_router_prompt.py  test_cap_probe.py  test_check_pr_release_policy.py  test_hooks.py  test_narrative_cap_probe.py  test_render_pipeline.py  test_shared_cap_auth.py  test_strategy_discovery_bootstrap.py  test_strategy_discovery_branch_runtime.py  test_strategy_discovery_doctor.py  test_strategy_discovery_edge_runtime.py  (+3 more)
(+171 files in other folders)
